--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ android {
     lintOptions {
         disable 'ExpiredTargetSdkVersion'
     }
-
+    packagingOptions {
+        exclude 'META-INF/LICENSE-notice.md'
+        exclude 'META-INF/LICENSE.md'
+    }
     defaultConfig {
         minSdkVersion 24
         //noinspection ExpiredTargetSdkVersion
