added sdd (not tested yet)

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 30 00:32:02 MST 2024
-sdk.dir=/Users/gradengentry/Library/Android/sdk
+#Thu Jan 16 21:57:22 MST 2025
+sdk.dir=C\:\\Users\\grade\\AppData\\Local\\Android\\Sdk
